1-basic/minikube-istio-app-deploy/5-controlplane-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlplane-app
  namespace: controlplane-system
spec:
  selector:
    matchLabels:
      app: controlplane-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: controlplane-app
        version: "1"
    spec:
      containers:
        - name: controlplane-container
          image: kameshayachit/control-plane-app:latest

---
apiVersion: v1
kind: Service
metadata:
  name: controlplane-service
  namespace: controlplane-system
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: controlplane-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
