1-basic/minikube-istio-app-deploy/6-guardrails-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrails-app
  namespace: guardrails-system
spec:
  selector:
    matchLabels:
      app: guardrails-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: guardrails-app
        version: "1"
    spec:
      containers:
        - name: guardrails-container
          image: kameshayachit/guardrails-app:latest

---
apiVersion: v1
kind: Service
metadata:
  name: guardrails-service
  namespace: guardrails-system
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: guardrails-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
