1-basic/minikube-istio-app-deploy/7-mockllm-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summariser-app
  namespace: summariser-system
spec:
  selector:
    matchLabels:
      app: summariser-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: summariser-app
        version: "1"
    spec:
      containers:
        - name: summariser-container
          image: kameshayachit/summariser-app:latest

---
apiVersion: v1
kind: Service
metadata:
  name: summariser-service
  namespace: summariser-system
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: summariser-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
