1-basic/minikube-istio-app-deploy/8-summariser-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockllm-app
  namespace: mockllm-system
spec:
  selector:
    matchLabels:
      app: mockllm-app
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: mockllm-app
        version: "1"
    spec:
      containers:
        - name: mockllm-container
          image: kameshayachit/mockllm-app:latest

---
apiVersion: v1
kind: Service
metadata:
  name: mockllm-service
  namespace: mockllm-system
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: mockllm-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
