1-basic/minikube-istio-app-deploy/9-istio-rules-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shared-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Use Istio's default ingress gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Allow all external hosts

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: controlplane-vs
  namespace: controlplane-system
spec:
  hosts:
  - "*" # Match any external host
  gateways:
  - istio-system/shared-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /generatetext # Prefix for routing to controlplane service
    route:
    - destination:
        host: controlplane-service.controlplane-system.svc.cluster.local
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: summariser-vs
  namespace: summariser-system
spec:
  hosts:
  - "*" # Match any external host
  gateways:
  - istio-system/shared-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /summarisecontent # Prefix for routing to summariser service
    route:
    - destination:
        host: summariser-service.summariser-system.svc.cluster.local
        port:
          number: 80

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: guardrails-service-vs
#   namespace: guardrails-system
# spec:
#   hosts:
#   - guardrails-service.guardrails-system.svc.cluster.local
#   http:
#   - route:
#     - destination:
#         host: guardrails-service.guardrails-system.svc.cluster.local
#         port:
#           number: 8000
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: controlplane-service-dr
#   namespace: controlplane-system
# spec:
#   host: controlplane-service.controlplane-system.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: guardrails-service-dr
#   namespace: guardrails-system
# spec:
#   host: guardrails-service.guardrails-system.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: mockllm-service-vs
#   namespace: mockllm-system
# spec:
#   hosts:
#   - mockllm-service.mockllm-system.svc.cluster.local
#   http:
#   - route:
#     - destination:
#         host: mockllm-service.mockllm-system.svc.cluster.local
#         port:
#           number: 8000
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: mockllm-service-dr
#   namespace: mockllm-system
# spec:
#   host: mockllm-service.mockllm-system.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
